# deepfaune-new-england

./: .gitignore  CITATION.cff  METHODS.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup_env.sh
.github/workflows/: publish-pypi.yml  tests.yml
config/: pipeline_settings.example.yaml  pipeline_settings_excerpt.yaml
core/: classifier.py  detector.py
docs/: BUILD_STATUS.md  MODELS.md
docs/examples/: clip_report_example.json  hourly_summary_example.json  validation_single_dog_case.csv  validation_single_dog_report.json
systemd/: deepfaune-hourly.service  deepfaune-hourly.timer
tests/: test_pipeline.py  test_retention.py  test_video.py
utils/: __init__.py  camtrap_dp.py  commands.py  config.py  file_handling.py  locking.py  mount_checks.py  reporting.py  retention.py  review.py  validation.py  video.py
