[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfaune-new-england"
version = "0.1.0"
description = "Open workflow for wildlife video processing with MegaDetector and DeepFaune New England classification."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "paynejoel-source"},
]
dependencies = [
  "PytorchWildlife==1.2.4.2",
  "lightning==2.6.1",
  "omegaconf==2.3.0",
  "timm==1.0.26",
  "ultralytics==8.4.26",
  "PyYAML==6.0.3",
  "pandas==3.0.1",
]
keywords = ["wildlife", "megadetector", "deepfaune", "camera-traps", "video-processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
deepfaune-new-england = "run_pipeline:main"

[project.urls]
Homepage = "https://github.com/paynejoel-source/deepfaune-new-england"
Repository = "https://github.com/paynejoel-source/deepfaune-new-england"
Issues = "https://github.com/paynejoel-source/deepfaune-new-england/issues"

[tool.setuptools]
py-modules = ["run_pipeline"]

[tool.setuptools.packages.find]
include = ["core", "core.*", "utils", "utils.*"]
